# internal/posts/ports/handler.go
@@ -3,7 +3,12 @@ package ports
 import "github.com/gin-gonic/gin"
 
 func MountHandlers(server *HttpServer, router *gin.RouterGroup) {
-	router.POST("/", server.CreatePost)
-	router.DELETE("/:post_id", server.DeletePost)
+	authorized := router.Group("/")
+	authorized.Use(server.SessionMiddleware.Middleware())
+	{
+		authorized.POST("/", server.CreatePost)
+		authorized.DELETE("/:post_id", server.DeletePost)
+	}
+
 	router.GET("/list", server.ListPosts)
 }
